Fixed the banner browser on all offers page layout on mobile app.

--- a/Source/Mobile/src/app/pages/users/all-offers/all-offers.page.scss
+++ b/Source/Mobile/src/app/pages/users/all-offers/all-offers.page.scss
@@ -7,7 +7,8 @@
 .card{
     width: 100%;
     margin-right: 10px;
-    margin-bottom: 10px;
+    margin-top: 10px;
+    margin-bottom: 20px;
 
     .back_image{
         height: 120px;
